@@ -18,6 +18,9 @@ else.  With this, include the file(s) that you changed.
 
 Changes for CVS:
 
+server/shop.c: Fix bug that resulted in items in shop being paid,
+as well as not generating proper listing.  MSW 2001-06-06.
+
 Checkin of code that supports larger map sizes (configurable in
 config.h).
 common/los.c: update los code since it only handled 11x11 maps.  Now
